tests/baselines/reference/importAssertion1(module=esnext).errors.txt
1.ts(1,14): error TS1008: The 'assert' keyword in import attributes is deprecated and it has been replaced by the 'with' keyword.
1.ts(2,28): error TS1008: The 'assert' keyword in import attributes is deprecated and it has been replaced by the 'with' keyword.
1.ts(3,28): error TS1008: The 'assert' keyword in import attributes is deprecated and it has been replaced by the 'with' keyword.
2.ts(1,28): error TS1008: The 'assert' keyword in import attributes is deprecated and it has been replaced by the 'with' keyword.
2.ts(2,38): error TS1008: The 'assert' keyword in import attributes is deprecated and it has been replaced by the 'with' keyword.
3.ts(8,11): message TS1450: Dynamic imports can only accept a module specifier and an optional set of attributes as arguments
3.ts(9,11): message TS1450: Dynamic imports can only accept a module specifier and an optional set of attributes as arguments


==== 0.ts (0 errors) ====
    export const a = 1;
    export const b = 2;
    
==== 1.ts (3 errors) ====
    import './0' assert { type: "json" }
                 ~~~~~~
!!! error TS1008: The 'assert' keyword in import attributes is deprecated and it has been replaced by the 'with' keyword.
    import { a, b } from './0' assert { "type": "json" }
                               ~~~~~~
!!! error TS1008: The 'assert' keyword in import attributes is deprecated and it has been replaced by the 'with' keyword.
    import * as foo from './0' assert { type: "json" }
                               ~~~~~~
!!! error TS1008: The 'assert' keyword in import attributes is deprecated and it has been replaced by the 'with' keyword.
    a;
    b;
    foo.a;
    foo.b;
    
==== 2.ts (2 errors) ====
    import { a, b } from './0' assert {}
                               ~~~~~~
!!! error TS1008: The 'assert' keyword in import attributes is deprecated and it has been replaced by the 'with' keyword.
    import { a as c, b as d } from './0' assert { a: "a", b: "b", c: "c" }
                                         ~~~~~~
!!! error TS1008: The 'assert' keyword in import attributes is deprecated and it has been replaced by the 'with' keyword.
    a;
    b;
    c;
    d;
    
==== 3.ts (2 errors) ====
    const a = import('./0')
    const b = import('./0', { assert: { type: "json" } })
    const c = import('./0', { assert: { type: "json", ttype: "typo" } })
    const d = import('./0', { assert: {} })
    const dd = import('./0', {})
    declare function foo(): any;
    const e = import('./0', foo())
    const f = import()
              ~~~~~~~~
!!! message TS1450: Dynamic imports can only accept a module specifier and an optional set of attributes as arguments
    const g = import('./0', {}, {})
              ~~~~~~~~~~~~~~~~~~~~~
!!! message TS1450: Dynamic imports can only accept a module specifier and an optional set of attributes as arguments
    const h = import('./0', { assert: { type: "json" }},)
    
    